--- a/apps/FlowerApp/src/app/shared/components/ui/gift-ui.component.scss
+++ b/apps/FlowerApp/src/app/shared/components/ui/gift-ui.component.scss
@@ -5,7 +5,7 @@
   // justify-content: center; /* Centering y-axis */
   // align-items: center; /* Centering x-axis */
   text-align: center;
-  height: 410px;
+  //height: 410px;
   background-repeat: no-repeat;
   
   .heading3 {
